test/fail/pkg/unused4.mo
module {

  // a private, unused definition
  let unused4 = 1;

}
